# NovaMP

./: .gitignore  CMakeLists.txt  CMakePresets.json  LICENSE  README.md  vcpkg.json
.github/workflows/: release.yml
client/: CMakeLists.txt
client/Resources/Client/: ai_authority.lua  main.lua  vehicle_sync.lua
client/Resources/Client/ui/: hud.lua
client/src/: launcher.cpp  launcher.hpp  main.cpp
client/src/auth/: nova_auth.cpp  nova_auth.hpp
client/src/compat/: beammp_auth.cpp  beammp_auth.hpp  beammp_client.cpp  beammp_client.hpp  beammp_protocol.cpp  beammp_protocol.hpp
client/src/network/: client.cpp  client.hpp  packet.hpp
client/src/ui/: server_browser.cpp  server_browser.hpp
docs/: ai_traffic.md  building.md  lua_api.md  protocol.md
server/: CMakeLists.txt  Dockerfile  config.toml  docker-compose.yml  schema.sql
server/src/: main.cpp  master_server.cpp  master_server.hpp
server/src/api/: rest_api.cpp  rest_api.hpp
server/src/auth/: auth_manager.cpp  auth_manager.hpp
server/src/db/: database.cpp  database.hpp
server/src/registry/: server_registry.cpp  server_registry.hpp
servers/: CMakeLists.txt  Dockerfile  docker-compose.yml  start.bat  start.sh
servers/Resources/Server/ai_bridge/: main.lua
servers/Resources/Server/plugins/: ai_traffic_control.lua  chat_commands.lua  example.lua
servers/Resources/Server/tools/: export_roads.lua
servers/src/: game_server.cpp  game_server.hpp  headless_launcher.cpp  headless_launcher.hpp  main.cpp  player.cpp  player.hpp
servers/src/config/: config.cpp  config.hpp
servers/src/console/: console.cpp  console.hpp  rcon.cpp  rcon.hpp
servers/src/lua/: lua_engine.cpp  lua_engine.hpp
servers/src/network/: packet.hpp  tcp_server.cpp  tcp_server.hpp  udp_server.cpp  udp_server.hpp
servers/src/sync/: ai_authority.cpp  ai_authority.hpp  ai_traffic.cpp  ai_traffic.hpp  road_network.cpp  road_network.hpp  vehicle_sync.cpp  vehicle_sync.hpp
